--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <projectDescription>
-	<name>FreeRTOS_test</name>
+	<name>CH32_QuadRotor</name>
 	<comment/>
 	<projects>
 	</projects>
@@ -24,21 +24,7 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
 	<linkedResources>
-		<link>
-			<name>Core</name>
-			<type>2</type>
-			<locationURI>PROJECT_LOC/Core</locationURI>
-		</link>
-		<link>
-			<name>Debug</name>
-			<type>2</type>
-			<locationURI>PROJECT_LOC/Debug</locationURI>
-		</link>
-		<link>
-			<name>Peripheral</name>
-			<type>2</type>
-			<locationURI>PROJECT_LOC/Peripheral</locationURI>
-		</link>
+		
 	</linkedResources>
 	<filteredResources>
 		<filter>
