IMU用DMP有问题。进度存档

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <projectDescription>
-	<name>CH32_QuadRotor</name>
+	<name>FreeRTOS_test</name>
 	<comment/>
 	<projects>
 	</projects>
